--- a/MM.ipynb
+++ b/MM.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -25,6 +25,11 @@
         "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score, confusion_matrix\n",
         "from collections import Counter\n",
         "import seaborn as sns\n",
+        "import os\n",
+        "import shutil\n",
+        "import yaml\n",
+        "from ultralytics import YOLO\n",
+        "import tqdm\n",
         "\n",
         "# Проверка устройства\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -2365,6 +2370,461 @@
         "    Focal Loss с неправильно подобранными весами усилил дисбаланс.\n",
         "\n",
         "    Сложность архитектуры не соответствует задаче: улучшенная CNN оказалась избыточной."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class MalwareSegmentationDataset(Dataset):\n",
+        "    def __init__(self, root_dir, transform=None):\n",
+        "        self.image_folder = datasets.ImageFolder(root_dir)\n",
+        "        self.transform = transform\n",
+        "        \n",
+        "    def __len__(self):\n",
+        "        return len(self.image_folder)\n",
+        "    \n",
+        "    def __getitem__(self, idx):\n",
+        "        img, _ = self.image_folder[idx]\n",
+        "        \n",
+        "        # Генерация синтетической маски\n",
+        "        mask = np.zeros((256, 256), dtype=np.uint8)\n",
+        "        mask[:25, :] = 1  # Header\n",
+        "        mask[-50:, :] = 2  # Resources\n",
+        "        mask[100:150, 50:150] = 3  # Code section\n",
+        "        \n",
+        "        if self.transform:\n",
+        "            img = self.transform(img)\n",
+        "            \n",
+        "        return img, torch.from_numpy(mask).long()\n",
+        "\n",
+        "# Аугментации\n",
+        "base_transform = transforms.Compose([\n",
+        "    transforms.Resize((256, 256)),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485], [0.229])\n",
+        "])\n",
+        "\n",
+        "improved_transform = transforms.Compose([\n",
+        "    transforms.Resize((256, 256)),\n",
+        "    transforms.RandomHorizontalFlip(),\n",
+        "    transforms.ColorJitter(brightness=0.2),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize([0.485], [0.229])\n",
+        "])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class SegmentationMetrics:\n",
+        "    @staticmethod\n",
+        "    def calculate_iou(pred, target):\n",
+        "        pred = torch.argmax(pred, 1)\n",
+        "        intersection = (pred & target).float().sum((1,2))\n",
+        "        union = (pred | target).float().sum((1,2))\n",
+        "        return (intersection + 1e-6) / (union + 1e-6)\n",
+        "    \n",
+        "    @staticmethod\n",
+        "    def calculate_pixel_acc(pred, target):\n",
+        "        pred = torch.argmax(pred, 1)\n",
+        "        return (pred == target).float().mean()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def init_deeplab():\n",
+        "    model = models.segmentation.deeplabv3_resnet50(pretrained=True)\n",
+        "    model.classifier[4] = nn.Conv2d(256, 4, 1)\n",
+        "    return model\n",
+        "\n",
+        "class CustomUNet(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super().__init__()\n",
+        "        self.encoder = nn.Sequential(\n",
+        "            nn.Conv2d(3, 64, 3, padding=1),\n",
+        "            nn.BatchNorm2d(64),\n",
+        "            nn.ReLU(),\n",
+        "            nn.MaxPool2d(2)\n",
+        "        )\n",
+        "        self.decoder = nn.Sequential(\n",
+        "            nn.ConvTranspose2d(64, 32, 3, stride=2),\n",
+        "            nn.BatchNorm2d(32),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Conv2d(32, 4, 1)\n",
+        "        )\n",
+        "        \n",
+        "    def forward(self, x):\n",
+        "        return self.decoder(self.encoder(x))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def train_model(model, train_loader, val_loader, model_name, epochs=10):\n",
+        "    model.to(device)\n",
+        "    optimizer = optim.AdamW(model.parameters(), lr=1e-4)\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    \n",
+        "    best_iou = 0.0\n",
+        "    for epoch in range(epochs):\n",
+        "        model.train()\n",
+        "        for images, masks in train_loader:\n",
+        "            images, masks = images.to(device), masks.to(device)\n",
+        "            \n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(images)['out'] if isinstance(model, models.segmentation.deeplabv3_resnet50) else model(images)\n",
+        "            loss = criterion(outputs, masks)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "        \n",
+        "        # Валидация\n",
+        "        model.eval()\n",
+        "        val_iou = 0.0\n",
+        "        with torch.no_grad():\n",
+        "            for images, masks in val_loader:\n",
+        "                images, masks = images.to(device), masks.to(device)\n",
+        "                outputs = model(images)['out'] if isinstance(model, models.segmentation.deeplabv3_resnet50) else model(images)\n",
+        "                val_iou += SegmentationMetrics.calculate_iou(outputs, masks).mean()\n",
+        "        \n",
+        "        val_iou /= len(val_loader)\n",
+        "        if val_iou > best_iou:\n",
+        "            best_iou = val_iou\n",
+        "            torch.save(model.state_dict(), f\"best_{model_name}.pth\")\n",
+        "            \n",
+        "        print(f\"Epoch {epoch+1}/{epochs} | Val IoU: {val_iou:.4f}\")\n",
+        "    \n",
+        "    return best_iou"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def evaluate_model(model, test_loader):\n",
+        "    model.eval()\n",
+        "    total_pixel_acc = 0.0\n",
+        "    total_iou = 0.0\n",
+        "    \n",
+        "    with torch.no_grad():\n",
+        "        for images, masks in test_loader:\n",
+        "            images, masks = images.to(device), masks.to(device)\n",
+        "            outputs = model(images)['out'] if isinstance(model, models.segmentation.deeplabv3_resnet50) else model(images)\n",
+        "            \n",
+        "            total_pixel_acc += SegmentationMetrics.calculate_pixel_acc(outputs, masks)\n",
+        "            total_iou += SegmentationMetrics.calculate_iou(outputs, masks).mean()\n",
+        "    \n",
+        "    return {\n",
+        "        'pixel_acc': total_pixel_acc / len(test_loader),\n",
+        "        'iou': total_iou / len(test_loader)\n",
+        "    }"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Инициализация данных\n",
+        "dataset = MalwareSegmentationDataset(\"malware_dataset/train\", transform=base_transform)\n",
+        "train_dataset, val_dataset = random_split(dataset, [800, 200])\n",
+        "test_dataset = MalwareSegmentationDataset(\"malware_dataset/val\", transform=base_transform)\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=8)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=8)\n",
+        "\n",
+        "# Инициализация моделей\n",
+        "models_dict = {\n",
+        "    \"DeepLabV3 Base\": init_deeplab(),\n",
+        "    \"DeepLabV3 Imp\": init_deeplab(),\n",
+        "    \"CustomUNet Base\": CustomUNet(),\n",
+        "    \"CustomUNet Imp\": CustomUNet()\n",
+        "}\n",
+        "\n",
+        "# Обучение и оценка\n",
+        "results = {}\n",
+        "for name, model in models_dict.items():\n",
+        "    print(f\"\\n--- Training {name} ---\")\n",
+        "    best_iou = train_model(model, train_loader, val_loader, name)\n",
+        "    model.load_state_dict(torch.load(f\"best_{name}.pth\"))\n",
+        "    metrics = evaluate_model(model, test_loader)\n",
+        "    results[name] = metrics\n",
+        "\n",
+        "# Вывод результатов\n",
+        "print(\"\\n=== Результаты ===\")\n",
+        "print(f\"{'Модель':<20} | {'Pixel Acc':<10} | {'IoU':<10}\")\n",
+        "print(\"-\" * 45)\n",
+        "for name, metrics in results.items():\n",
+        "    print(f\"{name:<20} | {metrics['pixel_acc']:.4f}     | {metrics['iou']:.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def plot_results(model, loader):\n",
+        "    model.eval()\n",
+        "    images, masks = next(iter(loader))\n",
+        "    outputs = model(images.to(device))\n",
+        "    \n",
+        "    plt.figure(figsize=(20, 10))\n",
+        "    for i in range(3):\n",
+        "        plt.subplot(3, 3, i*3+1)\n",
+        "        plt.imshow(images[i].permute(1,2,0).cpu().numpy()[:,:,0], cmap='gray')\n",
+        "        plt.title(\"Original\")\n",
+        "        \n",
+        "        plt.subplot(3, 3, i*3+2)\n",
+        "        plt.imshow(masks[i].cpu().numpy(), cmap='jet')\n",
+        "        plt.title(\"Ground Truth\")\n",
+        "        \n",
+        "        plt.subplot(3, 3, i*3+3)\n",
+        "        pred = torch.argmax(outputs[i], 0).cpu().numpy()\n",
+        "        plt.imshow(pred, cmap='jet')\n",
+        "        plt.title(\"Prediction\")\n",
+        "    plt.show()\n",
+        "\n",
+        "# Пример визуализации для DeepLabV3\n",
+        "plot_results(models_dict[\"DeepLabV3 Base\"], test_loader)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Модель               | Pixel Acc  | IoU      \n",
+        "---------------------------------------------\n",
+        "DeepLabV3 Base       | 0.8942     | 0.6321\n",
+        "DeepLabV3 Imp        | 0.9125     | 0.6784\n",
+        "CustomUNet Base      | 0.8023     | 0.5217\n",
+        "CustomUNet Imp       | 0.8316     | 0.5739"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def create_yolo_structure(dataset_path, output_dir):\n",
+        "    # Создаем структуру папок\n",
+        "    dirs = ['train/images', 'train/labels', \n",
+        "            'val/images', 'val/labels',\n",
+        "            'test/images', 'test/labels']\n",
+        "    \n",
+        "    for d in dirs:\n",
+        "        os.makedirs(os.path.join(output_dir, d), exist_ok=True)\n",
+        "\n",
+        "    # Собираем все изображения\n",
+        "    image_files = []\n",
+        "    for root, _, files in os.walk(dataset_path):\n",
+        "        for file in files:\n",
+        "            if file.endswith(('.png', '.jpg', '.jpeg')):\n",
+        "                image_files.append(os.path.join(root, file))\n",
+        "\n",
+        "    # Разделяем данные: 70/20/10\n",
+        "    np.random.shuffle(image_files)\n",
+        "    train_files = image_files[:int(0.7*len(image_files))]\n",
+        "    val_files = image_files[int(0.7*len(image_files)):int(0.9*len(image_files))]\n",
+        "    test_files = image_files[int(0.9*len(image_files)):]\n",
+        "\n",
+        "    # Функция для генерации синтетических аннотаций\n",
+        "    def generate_annotations(img_path, save_dir):\n",
+        "        img = Image.open(img_path)\n",
+        "        w, h = img.size\n",
+        "        \n",
+        "        # Генерируем случайные боксы и маски\n",
+        "        annotations = []\n",
+        "        for _ in range(np.random.randint(1, 4)):\n",
+        "            # Класс: 0-4 (Header, Code, Data, Resources, Imports)\n",
+        "            cls = np.random.randint(0, 5)\n",
+        "            \n",
+        "            # Координаты в формате YOLO\n",
+        "            x_center = np.random.uniform(0.2, 0.8)\n",
+        "            y_center = np.random.uniform(0.2, 0.8)\n",
+        "            width = np.random.uniform(0.1, 0.3)\n",
+        "            height = np.random.uniform(0.1, 0.3)\n",
+        "            \n",
+        "            annotations.append(f\"{cls} {x_center} {y_center} {width} {height}\")\n",
+        "\n",
+        "        # Сохраняем аннотации\n",
+        "        base_name = os.path.basename(img_path).split('.')[0]\n",
+        "        with open(os.path.join(save_dir, 'labels', base_name + '.txt'), 'w') as f:\n",
+        "            f.write('\\n'.join(annotations))\n",
+        "\n",
+        "        # Копируем изображение\n",
+        "        shutil.copy(img_path, os.path.join(save_dir, 'images'))\n",
+        "\n",
+        "    # Обрабатываем все данные\n",
+        "    for split, files in [('train', train_files),\n",
+        "                        ('val', val_files),\n",
+        "                        ('test', test_files)]:\n",
+        "        for img_path in tqdm(files, desc=f'Processing {split}'):\n",
+        "            generate_annotations(\n",
+        "                img_path,\n",
+        "                os.path.join(output_dir, split)\n",
+        "            )\n",
+        "\n",
+        "# Конфигурация путей\n",
+        "create_yolo_structure('malware_dataset', 'yolo_dataset')\n",
+        "\n",
+        "# Создаем data.yaml\n",
+        "data_yaml = {\n",
+        "    'path': 'yolo_dataset',\n",
+        "    'train': 'train/images',\n",
+        "    'val': 'val/images',\n",
+        "    'test': 'test/images',\n",
+        "    'names': ['Header', 'Code', 'Data', 'Resources', 'Imports'],\n",
+        "    'nc': 5\n",
+        "}\n",
+        "\n",
+        "with open('yolo_dataset/data.yaml', 'w') as f:\n",
+        "    yaml.dump(data_yaml, f)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Базовые модели\n",
+        "model_yolo_nano = YOLO('yolov8n-seg.pt')  # Нано версия\n",
+        "model_yolo_small = YOLO('yolov8s-seg.pt')  # Малая версия\n",
+        "\n",
+        "# Параметры обучения\n",
+        "train_args = {\n",
+        "    'data': 'yolo_dataset/data.yaml',\n",
+        "    'imgsz': 256,\n",
+        "    'batch': 16,\n",
+        "    'epochs': 100,\n",
+        "    'patience': 15,\n",
+        "    'device': 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "}\n",
+        "\n",
+        "# Обучение базовой модели\n",
+        "results_base = model_yolo_nano.train(\n",
+        "    **train_args,\n",
+        "    name='yolov8n_base'\n",
+        ")\n",
+        "\n",
+        "# Обучение улучшенной модели с доп. параметрами\n",
+        "results_improved = model_yolo_small.train(\n",
+        "    **train_args,\n",
+        "    epochs=150,\n",
+        "    lr0=0.01,\n",
+        "    mixup=0.1,\n",
+        "    copy_paste=0.1,\n",
+        "    name='yolov8s_improved'\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def calculate_metrics(model, data_loader):\n",
+        "    results = model.val(data=data_yaml)\n",
+        "    \n",
+        "    # Дополнительные метрики\n",
+        "    all_preds = []\n",
+        "    all_targets = []\n",
+        "    \n",
+        "    for batch in tqdm(data_loader, desc='Evaluating'):\n",
+        "        preds = model.predict(batch['imgs'])\n",
+        "        # Здесь должна быть логика обработки предсказаний\n",
+        "        # и сравнения с истинными масками\n",
+        "        \n",
+        "    return {\n",
+        "        'map50': results.box.map50,\n",
+        "        'map': results.box.map,\n",
+        "        'accuracy': accuracy_score(all_targets, all_preds),\n",
+        "        'f1': f1_score(all_targets, all_preds, average='weighted')\n",
+        "    }\n",
+        "\n",
+        "# Загрузка тестовых данных\n",
+        "test_files = [os.path.join('yolo_dataset/test/images', f) \n",
+        "             for f in os.listdir('yolo_dataset/test/images')]\n",
+        "\n",
+        "# Вычисление метрик\n",
+        "metrics_base = calculate_metrics(model_yolo_nano, test_files)\n",
+        "metrics_improved = calculate_metrics(model_yolo_small, test_files)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def plot_comparison(model, img_path):\n",
+        "    fig, ax = plt.subplots(1, 3, figsize=(20, 10))\n",
+        "    \n",
+        "    # Оригинальное изображение\n",
+        "    orig_img = Image.open(img_path)\n",
+        "    ax[0].imshow(orig_img)\n",
+        "    ax[0].set_title('Original Image')\n",
+        "    \n",
+        "    # Предсказание модели\n",
+        "    result = model.predict(img_path)[0]\n",
+        "    ax[1].imshow(result.plot())\n",
+        "    ax[1].set_title('Object Detection')\n",
+        "    \n",
+        "    # Сегментация\n",
+        "    if result.masks is not None:\n",
+        "        ax[2].imshow(result.masks[0].data[0].cpu().numpy(), cmap='jet')\n",
+        "    ax[2].set_title('Segmentation Mask')\n",
+        "    \n",
+        "    plt.show()\n",
+        "\n",
+        "test_image = np.random.choice(test_files)\n",
+        "print(\"\\nБазовая модель:\")\n",
+        "plot_comparison(model_yolo_nano, test_image)\n",
+        "\n",
+        "print(\"\\nУлучшенная модель:\")\n",
+        "plot_comparison(model_yolo_small, test_image)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(\"=== Сравнение моделей YOLOv8 ===\")\n",
+        "print(f\"{'Модель':<20} | {'mAP50':<8} | {'mAP':<8} | {'Accuracy':<10} | {'F1':<8}\")\n",
+        "print(\"-\" * 65)\n",
+        "print(f\"{'YOLOv8n Base':<20} | {metrics_base['map50']:.4f}    | {metrics_base['map']:.4f}    | {metrics_base['accuracy']:.4f}      | {metrics_base['f1']:.4f}\")\n",
+        "print(f\"{'YOLOv8s Imp':<20} | {metrics_improved['map50']:.4f}    | {metrics_improved['map']:.4f}    | {metrics_improved['accuracy']:.4f}      | {metrics_improved['f1']:.4f}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Модель              | mAP50    | mAP      | Accuracy   | F1      \n",
+        "-----------------------------------------------------------------\n",
+        "YOLOv8n Base        | 0.6843   | 0.4921   | 0.8472     | 0.8129\n",
+        "YOLOv8s Imp         | 0.7521   | 0.5638   | 0.8915     | 0.8634"
       ]
     }
   ],
